deleted default for weather schema and fixed whitespace error

--- a/public/css/user-page.css
+++ b/public/css/user-page.css
@@ -12,6 +12,15 @@ nav {
   background: #F7FED8;
 }
 
+/* .card-hover-shadow-2x {
+  margin-top: 100px;
+} */
+
+.active-pink-4, .active-pink-3, .mb-4 {
+  margin: 0;
+  margin-top: 50px;
+}
+
 h2, h3, h4 {
   text-align: center;
 
